Enable extension activation with icon and shortcut

--- a/manifest.json
+++ b/manifest.json
@@ -8,6 +8,14 @@
 	  "background.js"
 	]
   },
+  "browser_action": {},
+  "commands": {
+	"_execute_browser_action": {
+	  "suggested_key": {
+		"default": "Alt+Shift+H"
+	  }
+	}
+  },
   "permissions": [
 	"storage",
 	"contextMenus",
