Add packaging command & Extension id so you can load a self-built extension to dev versions of Firefox

--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
   },
   "scripts": {
     "build": "webpack --mode production",
-    "watch": "webpack --mode development --watch"
+    "watch": "webpack --mode development --watch",
+    "package": "web-ext build --overwrite-dest --source-dir dist"
   }
 }
