--- a/manifest.json
+++ b/manifest.json
@@ -3,6 +3,12 @@
   "description": "Matrix-based page highlighting",
   "version": "0.1.0",
   "manifest_version": 2,
+  "browser_specific_settings": {
+	"gecko": {
+	  "id": "matrix-highlight@danilafe",
+	  "strict_min_version": "67.0"
+	}
+  },
   "background": {
 	"scripts": [
 	  "background.js"
